--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,4 @@
 {
-
 	"manifest_version": 2,
 	"name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
@@ -8,8 +7,8 @@
 	"default_locale": "en",
 	"author": "Jhonatas Rodrigues",
 	"icons": {
-  "48": "../res/icons/icon.png",
-  "96": "../res/icons/icon@2x.png"
+  "48": "res/icons/icon.png",
+  "96": "res/icons/icon@2x.png"
 	},
 	"browser_action": {
 		"browser_style": true,
