--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,11 @@
 {
 	"manifest_version": 2,
 	"name": "__MSG_extensionName__",
-  "description": "__MSG_extensionDescription__",
+  	"description": "__MSG_extensionDescription__",
 	"version": "2.1.1",
 	"homepage_url": "https://github.com/jhonatasrm/social-helpers",
 	"default_locale": "en",
-	"author": "Jhonatas Rodrigues",
+	"author": "Jhonatas Machado",
 	"applications": {
 	"gecko": {
 		"id": "social-helpers@jhonatasrm.com",
@@ -13,15 +13,15 @@
 		}
 	},
 	"icons": {
-  "48": "res/icons/icon.png",
-  "96": "res/icons/icon@2x.png"
+  		"48": "res/icons/icon.png",
+  		"96": "res/icons/icon@2x.png"
 	},
 	"browser_action": {
 		"browser_style": true,
 		"default_icon": {
-    "16": "../res/icons/social_helpers-16.png",
-    "32": "../res/icons/social_helpers-32.png"
-  },
+   	 		"16": "../res/icons/social_helpers-16.png",
+    			"32": "../res/icons/social_helpers-32.png"
+  		},
 		"default_title": "__MSG_extensionName__",
 		"default_popup": "../html/popup.html"
 	},
