--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,36 +1,32 @@
 {
-	"manifest_version": 2,
-	"name": "__MSG_extensionName__",
-  	"description": "__MSG_extensionDescription__",
-	"version": "2.1.1",
-	"homepage_url": "https://github.com/jhonatasrm/social-helpers",
-	"default_locale": "en",
-	"author": "Jhonatas Machado",
-	"applications": {
-	"gecko": {
-		"id": "social-helpers@jhonatasrm.com",
-		"strict_min_version": "57.0"
-		}
-	},
-	"icons": {
-  		"48": "res/icons/icon.png",
-  		"96": "res/icons/icon@2x.png"
-	},
-	"browser_action": {
-		"browser_style": true,
-		"default_icon": {
-   	 		"16": "../res/icons/social_helpers-16.png",
-    			"32": "../res/icons/social_helpers-32.png"
-  		},
-		"default_title": "__MSG_extensionName__",
-		"default_popup": "../html/popup.html"
-	},
-	"background": {
-		"scripts": ["/js/popup.js"]
-	},
-	"permissions": [
-		"tabs",
-		"storage",
-		"activeTab"
-	]
+  "manifest_version": 2,
+  "name": "__MSG_extensionName__",
+  "description": "__MSG_extensionDescription__",
+  "version": "2.1.2",
+  "homepage_url": "https://github.com/jhonatasrm/social-helpers",
+  "default_locale": "en",
+  "author": "Jhonatas Machado",
+  "applications": {
+    "gecko": {
+      "id": "social-helpers@jhonatasrm.com",
+      "strict_min_version": "57.0"
+    }
+  },
+  "icons": {
+    "48": "res/icons/icon.png",
+    "96": "res/icons/icon@2x.png"
+  },
+  "browser_action": {
+    "browser_style": true,
+    "default_icon": {
+      "16": "../res/icons/social_helpers-16.png",
+      "32": "../res/icons/social_helpers-32.png"
+    },
+    "default_title": "__MSG_extensionName__",
+    "default_popup": "../html/popup.html"
+  },
+  "background": {
+    "scripts": ["/js/popup.js"]
+  },
+  "permissions": ["tabs", "storage", "activeTab"]
 }
